[package]
name = "synchrony"
version = "0.1.0"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2018"
publish = false
build = "src/build.rs"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.6.1"
either = "1.5.0"
redis = "0.13.0"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
regex = "1"
time = { version = "0.2.6", features = ["serde"] }
iron = "0.6"
iron-test = "0.6"
router = "0.6"
persistent = "0.4"
bodyparser = "0.8.0"
